Fix T52046: View transform applied twice w/ GL render

Patch from @sergey w/ minor edit.